<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:android="http://schemas.android.com/apk/res/android">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imageview"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginRight="10dp"
            android:src="@drawable/user"
            android:layout_marginTop="3dp"/>

        <TextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/imageview"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:text="Name"/>

        <TextView
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/imageview"
            android:layout_below="@id/name"
            android:textColor="@color/black"
            android:text="email@email.com"/>

        <TextView
            android:id="@+id/date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/imageview"
            android:layout_below="@id/email"
            android:textColor="@color/gray"
            android:text="@string/post"/>


        <ImageView
            android:id="@+id/postImage"
            android:layout_below="@id/date"
            android:layout_width="match_parent"
            android:layout_height="320dp"
            android:src="@drawable/sofimonkey"/>

        <ImageButton
            android:id="@+id/like"
            android:layout_width="20dp"
            android:layout_height="22dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/likee"
            android:layout_below="@id/postImage"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/like"
            android:layout_below="@id/postImage"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:textSize="15dp"
            android:text="@string/like"
            android:textColor="@color/black"/>

        <ImageButton
            android:id="@+id/comment"
            android:layout_width="20dp"
            android:layout_height="22dp"
            android:layout_marginLeft="80dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/comment"
            android:layout_toRightOf="@id/like"
            android:layout_below="@id/postImage"/>

        <TextView
            android:id="@+id/textcomment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/comment"
            android:layout_below="@id/postImage"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:textSize="15dp"
            android:text="@string/comment"
            android:textColor="@color/black"/>

        <ImageButton
            android:id="@+id/share"
            android:layout_width="20dp"
            android:layout_height="22dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/share"
            android:layout_toRightOf="@id/textcomment"
            android:layout_below="@id/postImage"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/share"
            android:layout_below="@id/postImage"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:textSize="15dp"
            android:text="@string/share"
            android:textColor="@color/black"/>


</RelativeLayout>
