<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.notifications.NotificationsFragment">


        <TextView
            android:id="@+id/text_notifications"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/today"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/avatar1"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="15dp"
            app:civ_border_color="#FFFFFF"
            app:civ_border_width="2dp"
            android:src="@drawable/maddikenn"
            android:layout_below="@+id/text_notifications"/>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/avatar2"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="25dp"
            android:src="@drawable/madi"
            app:civ_border_color="#FFFFFF"
            app:civ_border_width="2dp"
            android:layout_below="@+id/text_notifications"/>

        <TextView
            android:id="@+id/user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="skamalova,  mkauhanova"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="16dp"
            android:layout_toRightOf="@id/avatar2"
            android:layout_marginTop="62dp"
            android:layout_marginLeft="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/likedpost"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:layout_margin="5dp"
            android:layout_toRightOf="@id/avatar2"
            android:layout_below="@id/user"/>

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="2h"
            android:layout_alignParentRight="true"
            android:layout_marginRight="90dp"
            android:layout_marginTop="105dp"
            android:textSize="15sp"
            android:textColor="@color/gray"
            />

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:src="@drawable/img13"
            android:layout_marginTop="55dp" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/avatar3"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="85dp"
            app:civ_border_color="#FFFFFF"
            app:civ_border_width="2dp"
            android:src="@drawable/ami"
            android:layout_below="@+id/text_notifications"/>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/avatar4"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="95dp"
            android:src="@drawable/sofi"
            app:civ_border_color="#FFFFFF"
            app:civ_border_width="2dp"
            android:layout_below="@+id/text_notifications"/>

        <TextView
            android:id="@+id/user2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="madinak, sofiyakamalova"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="16dp"
            android:layout_toRightOf="@id/avatar3"
            android:layout_marginTop="130dp"
            android:layout_marginLeft="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/commented"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:layout_toRightOf="@id/avatar4"
            android:layout_below="@id/user2"
            android:layout_margin="5dp"/>

        <ImageView
            android:layout_width="50dp"
            android:layout_height="90dp"
            android:src="@drawable/img3"
            android:layout_alignParentRight="true"
            android:layout_marginRight="15dp"
            android:layout_marginTop="130dp" />

        <TextView
            android:id="@+id/date2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="3h"
            android:layout_alignParentRight="true"
            android:layout_marginRight="90dp"
            android:layout_marginTop="175dp"
            android:textSize="15sp"
            android:textColor="@color/gray"
            />


        <TextView
            android:id="@+id/text_notifications2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="230dp"
            android:layout_marginLeft="10dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:text="@string/yesterday"
            app:layout_constraintTop_toTopOf="parent" />


        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/avatar5"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="25dp"
            android:layout_marginLeft="10dp"
            app:civ_border_color="#FFFFFF"
            app:civ_border_width="2dp"
            android:src="@drawable/joni"
            android:layout_below="@+id/text_notifications2"/>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/avatar6"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginLeft="26dp"
            android:layout_marginTop="230dp"
            android:src="@drawable/anel"
            app:civ_border_color="#FFFFFF"
            app:civ_border_width="2dp"
            android:layout_below="@+id/text_notifications"/>

        <TextView
            android:id="@+id/user3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="janiyasabit,  anel"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="16dp"
            android:layout_toRightOf="@id/avatar5"
            android:layout_marginTop="275dp"
            android:layout_marginLeft="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/likedpost"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:layout_toRightOf="@id/avatar6"
            android:layout_below="@id/user3"
            android:layout_margin="5dp"/>

        <TextView
            android:id="@+id/date3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="6d"
            android:layout_alignParentRight="true"
            android:layout_marginRight="90dp"
            android:layout_marginTop="295dp"
            android:textSize="15sp"
            android:textColor="@color/gray"
            />

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:src="@drawable/img2"
            android:layout_marginTop="255dp" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/avatar7"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="305dp"
            app:civ_border_color="#FFFFFF"
            app:civ_border_width="2dp"
            android:src="@drawable/ami"
            android:layout_below="@+id/text_notifications"/>


        <TextView
            android:id="@+id/user5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="wikiwki_08"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="16dp"
            android:layout_toRightOf="@id/avatar3"
            android:layout_marginTop="350dp"
            android:layout_marginLeft="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sentrequest"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:layout_toRightOf="@id/avatar4"
            android:layout_below="@id/user5"
            android:layout_margin="5dp"/>

        <Button
            android:id="@+id/goToChat"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:text="@string/accept"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:layout_marginTop="340dp"
            android:background="@drawable/button_theme"/>

        <TextView
            android:id="@+id/date4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="9d"
            android:layout_alignParentRight="true"
            android:layout_marginRight="130dp"
            android:layout_marginTop="360dp"
            android:textSize="15sp"
            android:textColor="@color/gray"
            />



    </RelativeLayout>
</ScrollView>
